--- a/alfm/alfm_refs.bib
+++ b/alfm/alfm_refs.bib
@@ -1,203 +1,183 @@
-@article{Bai2022,
-  title={Constitutional AI: Harmlessness from AI Feedback},
-  author={Bai, Yuntao and Kadavath, Saurav and Kundu, Sandipan and Askell, Amanda and Kernion, Jackson and Jones, Andy and Chen, Anna and Goldie, Anna and Mirhoseini, Azalia and McKinnon, Cameron and others},
-  journal={arXiv preprint arXiv:2212.08073},
-  year={2022},
-  url={https://arxiv.org/abs/2212.08073}
-}
-
-@inproceedings{Borgeaud2022,
-  title={Improving language models by retrieving from trillions of tokens},
-  author={Borgeaud, Sebastian and Mensch, Arthur and Hoffmann, Jordan and Cai, Trevor and Rutherford, Eliza and Millican, Katie and Van Den Driessche, George Bm and Lespiau, Jean-Baptiste and Damoc, Bogdan and Clark, Aidan and others},
-  booktitle={International conference on machine learning},
-  pages={2206--2240},
-  year={2022},
-  organization={PMLR},
-  url={https://proceedings.mlr.press/v162/borgeaud22a.html}
-}
-
-@article{Chow1970,
-  title={On optimum recognition error and reject tradeoff},
-  author={Chow, C},
-  journal={IEEE Transactions on information theory},
-  volume={16},
-  number={1},
-  pages={41--46},
-  year={1970},
-  publisher={IEEE}
-}
-
-@inproceedings{Desai2020,
-  title={Calibration of Pre-trained Transformers},
-  author={Desai, Shrey and Durrett, Greg},
-  booktitle={Proceedings of the 2020 Conference on Empirical Methods in Natural Language Processing (EMNLP)},
-  pages={295--302},
-  year={2020}
-}
-
-@article{ElYaniv2010,
-  title={On the foundations of noise-free selective classification},
-  author={El-Yaniv, Ran and Wiener, Yair},
-  journal={Journal of Machine Learning Research},
-  volume={11},
-  number={May},
-  pages={1605--1641},
-  year={2010}
-}
-
-@inproceedings{Ethayarajh2019,
-  title={How Contextual are Contextualized Word Representations?},
-  author={Ethayarajh, Kawin},
-  booktitle={Proceedings of the 2019 Conference on Empirical Methods in Natural Language Processing and the 9th International Joint Conference on Natural Language Processing (EMNLP-IJCNLP)},
-  pages={668--678},
-  year={2019}
-}
-
-@inproceedings{Geifman2017,
-  title={Selective classification for deep neural networks},
-  author={Geifman, Yonatan and El-Yaniv, Ran},
-  booktitle={Advances in neural information processing systems},
-  volume={30},
-  year={2017}
-}
-
 @article{Graves2014,
-  title={Neural turing machines},
-  author={Graves, Alex and Wayne, Greg and Danihelka, Ivo},
-  journal={arXiv preprint arXiv:1410.5401},
-  year={2014},
-  url={https://arxiv.org/abs/1410.5401}
+  author    = {Alex Graves and Greg Wayne and Ivo Danihelka},
+  title     = {Neural Turing Machines},
+  journal   = {arXiv preprint arXiv:1410.5401},
+  year      = {2014},
+  url       = {https://arxiv.org/abs/1410.5401}
 }
 
 @article{Graves2016,
-  title={Hybrid computing using a neural network with dynamic external memory},
-  author={Graves, Alex and Wayne, Greg and Reynolds, Malcolm and Harley, Tim and Danihelka, Ivo and Grabska-Barwi{\'n}ska, Agnieszka and Colmenarejo, Sergio G{\'o}mez and Grefenstette, Edward and Ramalho, Tiago and Agapiou, John and others},
-  journal={Nature},
-  volume={538},
-  number={7626},
-  pages={471--476},
-  year={2016},
-  publisher={Nature Publishing Group}
-}
-
-@inproceedings{Guo2017,
-  title={On calibration of modern neural networks},
-  author={Guo, Chuan and Pleiss, Geoff and Sun, Yu and Weinberger, Kilian Q},
-  booktitle={International conference on machine learning},
-  pages={1321--1330},
-  year={2017},
-  organization={PMLR}
-}
-
-@inproceedings{Houlsby2019,
-  title={Parameter-Efficient Transfer Learning for NLP},
-  author={Houlsby, Neil and Giurgiu, Andrei and Jastrzebski, Stanislaw and Morrill, Bruna and Corrado, Andrea and Vassilvitskii, Sergei and Gelbukh, Alena and others},
-  booktitle={International Conference on Machine Learning},
-  pages={2790--2799},
-  year={2019},
-  organization={PMLR}
-}
-
-@inproceedings{Hu2022,
-  title={LoRA: Low-Rank Adaptation of Large Language Models},
-  author={Hu, Edward J and Shen, Yelong and Wallis, Phillip and Allen-Zhu, Zeyuan and Li, Yuanzhi and Wang, Shean and Wang, Lu and Chen, Weizhu},
-  booktitle={International Conference on Learning Representations},
-  year={2022}
-}
-
-@article{Kirkpatrick2017,
-  title={Overcoming catastrophic forgetting in neural networks},
-  author={Kirkpatrick, James and Pascanu, Razvan and Rabinowitz, Neil and Veness, Joel and Desjardins, Guillaume and Rusu, Andrei A and Milan, Kieran and Quan, John and Ramalho, Tiago and Grabska-Barwinska, Agnieszka and others},
-  journal={Proceedings of the national academy of sciences},
-  volume={114},
-  number={13},
-  pages={3521--3526},
-  year={2017},
-  publisher={National Acad Sciences}
-}
-
-@inproceedings{Madras2018,
-  title={Predict responsibly: improving fairness and accuracy by learning to defer},
-  author={Madras, David and Creager, Elliot and Pitassi, Toniann and Zemel, Richard},
-  booktitle={Advances in Neural Information Processing Systems},
-  volume={31},
-  year={2018}
-}
-
-@inproceedings{Mozannar2020,
-  title={Consistent estimators for learning to defer to an expert},
-  author={Mozannar, Hussein and Sontag, David},
-  booktitle={International Conference on Machine Learning},
-  pages={7076--7087},
-  year={2020},
-  organization={PMLR}
-}
-
-@article{Rebedea2023,
-  title={NeMo Guardrails: A Toolkit for Controllable and Safe LLM Applications},
-  author={Rebedea, Traian and Dinu, Razvan and Sreedhar, Makesh Narsimhan and Parisien, Christopher and Cohen, Jonathan},
-  journal={arXiv preprint arXiv:2310.10501},
-  year={2023},
-  url={https://arxiv.org/abs/2310.10501}
-}
-
-@inproceedings{Rolnick2019,
-  title={Experience replay for continual learning},
-  author={Rolnick, David and Ahuja, Arun and Schwarz, Jonathan and Lillicrap, Timothy and Wayne, Gregory},
-  booktitle={Advances in Neural Information Processing Systems},
-  volume={32},
-  year={2019}
-}
-
-@article{Rusu2016,
-  title={Progressive neural networks},
-  author={Rusu, Andrei A and Rabinowitz, Neil C and Desjardins, Guillaume and Soyer, Hubert and Kirkpatrick, James and Kavukcuoglu, Koray and Pascanu, Razvan and Hadsell, Raia},
-  journal={arXiv preprint arXiv:1606.04671},
-  year={2016}
-}
-
-@inproceedings{Varshney2022,
-  title={Investigating Selective Prediction Approaches Across Several Tasks in IID, OOD, and Adversarial Settings},
-  author={Varshney, Neeraj and Baral, Chitta},
-  booktitle={Findings of the Association for Computational Linguistics: ACL 2022},
-  pages={1995--2002},
-  year={2022}
+  author    = {Alex Graves and Greg Wayne and Malcolm Reynolds and Tim Harley and Ivo Danihelka and Agnieszka Grabska-Barwi{\'n}ska and Sergio G{\'o}mez Colmenarejo and Edward Grefenstette and Tiago Ramalho and John Agapiou and others},
+  title     = {Hybrid computing using a neural network with dynamic external memory},
+  journal   = {Nature},
+  volume    = {538},
+  number    = {7626},
+  pages     = {471--476},
+  year      = {2016},
+  url       = {https://www.nature.com/articles/nature20101}
 }
 
 @inproceedings{Weston2015,
-  title={Memory networks},
-  author={Weston, Jason and Chopra, Sumit and Bordes, Antoine},
-  booktitle={International conference on learning representations},
-  year={2015}
+  author    = {Jason Weston and Sumit Chopra and Antoine Bordes},
+  title     = {Memory Networks},
+  booktitle = {International Conference on Learning Representations},
+  year      = {2015},
+  url       = {https://arxiv.org/abs/1410.3916}
 }
 
 @inproceedings{Wu2022,
-  title={Memorizing transformers},
-  author={Wu, Yuhuai and Rabe, Markus N and Hutchins, DeLesley and Szegedy, Christian},
-  booktitle={International Conference on Learning Representations},
-  year={2022}
+  author    = {Yuhuai Wu and Markus N. Rabe and DeLesley Hutchins and Christian Szegedy},
+  title     = {Memorizing Transformers},
+  booktitle = {International Conference on Learning Representations},
+  year      = {2022},
+  url       = {https://openreview.net/forum?id=TrjbxzRcnf-}
 }
 
-@article{GoogleHOPE2025,
-  title={HOPE: High-Order Optimization for Nested Learning Architectures},
-  author={Google DeepMind},
-  journal={arXiv preprint arXiv:2501.00001},
-  year={2025},
-  url={https://arxiv.org/abs/2501.00001}
+@inproceedings{Borgeaud2022,
+  author    = {Sebastian Borgeaud and Arthur Mensch and Jordan Hoffmann and Trevor Cai and Eliza Rutherford and Katie Millican and George Bm Van Den Driessche and Jean-Baptiste Lespiau and Bogdan Damoc and Aidan Clark and others},
+  title     = {Improving language models by retrieving from trillions of tokens},
+  booktitle = {International Conference on Machine Learning},
+  pages     = {2206--2240},
+  year      = {2022},
+  organization = {PMLR},
+  url       = {https://proceedings.mlr.press/v162/borgeaud22a.html}
 }
 
-@article{SPICE2024,
-  title={SPICE: Self-Play for Institutional Coherence and Evolution},
-  author={Anthropic Research},
-  journal={arXiv preprint arXiv:2411.12345},
-  year={2024},
-  url={https://arxiv.org/abs/2411.12345}
+@article{Chow1970,
+  author    = {C. Chow},
+  title     = {On optimum recognition error and reject tradeoff},
+  journal   = {IEEE Transactions on Information Theory},
+  volume    = {16},
+  number    = {1},
+  pages     = {41--46},
+  year      = {1970},
+  url       = {https://ieeexplore.ieee.org/document/1054395}
 }
 
-@article{MAKER2024,
-  title={MAKER: Memory-Augmented Knowledge Editing and Retrieval},
-  author={OpenAI},
-  journal={arXiv preprint arXiv:2410.54321},
-  year={2024},
-  url={https://arxiv.org/abs/2410.54321}
+@article{ElYaniv2010,
+  author    = {Ran El-Yaniv and Yair Wiener},
+  title     = {On the foundations of noise-free selective classification},
+  journal   = {Journal of Machine Learning Research},
+  volume    = {11},
+  pages     = {1605--1641},
+  year      = {2010},
+  url       = {https://jmlr.org/papers/v11/el-yaniv10a.html}
+}
+
+@inproceedings{Geifman2017,
+  author    = {Yonatan Geifman and Ran El-Yaniv},
+  title     = {Selective classification for deep neural networks},
+  booktitle = {Advances in Neural Information Processing Systems},
+  volume    = {30},
+  year      = {2017},
+  url       = {https://proceedings.neurips.cc/paper/2017/hash/4a8423d5e91f477703876c2c50e09351-Abstract.html}
+}
+
+@inproceedings{Varshney2022,
+  author    = {Neeraj Varshney and Chitta Baral},
+  title     = {Investigating Selective Prediction Approaches Across Several Tasks in IID, OOD, and Adversarial Settings},
+  booktitle = {Findings of the Association for Computational Linguistics: ACL 2022},
+  pages     = {1995--2002},
+  year      = {2022},
+  url       = {https://aclanthology.org/2022.findings-acl.157/}
+}
+
+@inproceedings{Madras2018,
+  author    = {David Madras and Elliot Creager and Toniann Pitassi and Richard Zemel},
+  title     = {Predict Responsibly: Improving Fairness and Accuracy by Learning to Defer},
+  booktitle = {Advances in Neural Information Processing Systems},
+  volume    = {31},
+  year      = {2018},
+  url       = {https://proceedings.neurips.cc/paper/2018/hash/253614bbac999b38b5b60cae531c4969-Abstract.html}
+}
+
+@inproceedings{Mozannar2020,
+  author    = {Hussein Mozannar and David Sontag},
+  title     = {Consistent Estimators for Learning to Defer to an Expert},
+  booktitle = {International Conference on Machine Learning},
+  pages     = {7076--7087},
+  year      = {2020},
+  organization = {PMLR},
+  url       = {https://proceedings.mlr.press/v119/mozannar20b.html}
+}
+
+@inproceedings{Guo2017,
+  author    = {Chuan Guo and Geoff Pleiss and Yu Sun and Kilian Q. Weinberger},
+  title     = {On Calibration of Modern Neural Networks},
+  booktitle = {International Conference on Machine Learning},
+  pages     = {1321--1330},
+  year      = {2017},
+  organization = {PMLR},
+  url       = {https://proceedings.mlr.press/v70/guo17a.html}
+}
+
+@inproceedings{Desai2020,
+  author    = {Shrey Desai and Greg Durrett},
+  title     = {Calibration of Pre-trained Transformers},
+  booktitle = {Proceedings of the 2020 Conference on Empirical Methods in Natural Language Processing (EMNLP)},
+  pages     = {295--302},
+  year      = {2020},
+  url       = {https://aclanthology.org/2020.emnlp-main.23/}
+}
+
+@article{Kirkpatrick2017,
+  author    = {James Kirkpatrick and Razvan Pascanu and Neil Rabinowitz and Joel Veness and Guillaume Desjardins and Andrei A. Rusu and Kieran Milan and John Quan and Tiago Ramalho and Agnieszka Grabska-Barwinska and others},
+  title     = {Overcoming catastrophic forgetting in neural networks},
+  journal   = {Proceedings of the National Academy of Sciences},
+  volume    = {114},
+  number    = {13},
+  pages     = {3521--3526},
+  year      = {2017},
+  url       = {https://www.pnas.org/doi/full/10.1073/pnas.1611835114}
+}
+
+@inproceedings{Rolnick2019,
+  author    = {David Rolnick and Arun Ahuja and Jonathan Schwarz and Timothy Lillicrap and Gregory Wayne},
+  title     = {Experience Replay for Continual Learning},
+  booktitle = {Advances in Neural Information Processing Systems},
+  volume    = {32},
+  year      = {2019},
+  url       = {https://proceedings.neurips.cc/paper/2019/hash/47d1e990583c9c67424d369f3414728e-Abstract.html}
+}
+
+@article{Rusu2016,
+  author    = {Andrei A. Rusu and Neil C. Rabinowitz and Guillaume Desjardins and Hubert Soyer and James Kirkpatrick and Koray Kavukcuoglu and Razvan Pascanu and Raia Hadsell},
+  title     = {Progressive Neural Networks},
+  journal   = {arXiv preprint arXiv:1606.04671},
+  year      = {2016},
+  url       = {https://arxiv.org/abs/1606.04671}
+}
+
+@inproceedings{Hu2022,
+  author    = {Edward J. Hu and Yelong Shen and Phillip Wallis and Zeyuan Allen-Zhu and Yuanzhi Li and Shean Wang and Lu Wang and Weizhu Chen},
+  title     = {{LoRA}: Low-Rank Adaptation of Large Language Models},
+  booktitle = {International Conference on Learning Representations},
+  year      = {2022},
+  url       = {https://openreview.net/forum?id=nZeVKeeFYf9}
+}
+
+@inproceedings{Houlsby2019,
+  author    = {Neil Houlsby and Andrei Giurgiu and Stanislaw Jastrzebski and Bruna Morrone and Quentin De Laroussilhe and Andrea Gesmundo and Mona Attariyan and Sylvain Gelly},
+  title     = {Parameter-Efficient Transfer Learning for {NLP}},
+  booktitle = {International Conference on Machine Learning},
+  pages     = {2790--2799},
+  year      = {2019},
+  organization = {PMLR},
+  url       = {https://proceedings.mlr.press/v97/houlsby19a.html}
+}
+
+@article{Bai2022,
+  author    = {Yuntao Bai and Saurav Kadavath and Sandipan Kundu and Amanda Askell and Jackson Kernion and Andy Jones and Anna Chen and Anna Goldie and Azalia Mirhoseini and Cameron McKinnon and others},
+  title     = {Constitutional {AI}: Harmlessness from {AI} Feedback},
+  journal   = {arXiv preprint arXiv:2212.08073},
+  year      = {2022},
+  url       = {https://arxiv.org/abs/2212.08073}
+}
+
+@article{Rebedea2023,
+  author    = {Traian Rebedea and Razvan Dinu and Makesh Narsimhan Sreedhar and Christopher Parisien and Jonathan Cohen},
+  title     = {{NeMo} Guardrails: A Toolkit for Controllable and Safe {LLM} Applications with Programmable Rails},
+  journal   = {arXiv preprint arXiv:2310.10501},
+  year      = {2023},
+  url       = {https://arxiv.org/abs/2310.10501}
 }
