--- a/physics/coherism.tex
+++ b/physics/coherism.tex
@@ -52,7 +52,7 @@
 \begin{document}
 
 \title{%
-Gravitational Backreaction from Relative Entropy: A Variational Principle
+Coherism: A Variational Feedback Framework for Quantum Information and Spacetime Geometry
 }
 
 \author{David Ahmann}
@@ -73,7 +73,7 @@ We propose a variational framework that couples quantum information and spacetim
 \end{equation*}
 while variation with respect to $\rho$ yields a geometry-dependent open-system evolution
 $\dot{\rho} = -i[H,\rho] + \mathcal{L}_g[\rho]$.
-We propose a variational principle for gravitational backreaction based on the relative entropy of quantum fields in causal diamonds. By minimizing a ``coherence functional'' that balances the area deficit of the diamond boundary against the relative entropy of the bulk state, we derive the linearized Einstein equations with a source term proportional to the modular energy. Crucially, because the action vanishes for the reference vacuum state, this framework naturally degravitates vacuum energy, offering a mechanism to resolve the cosmological constant problem. We further show that this feedback mechanism leads to non-local entropic corrections to the stress tensor, which we calculate explicitly for a scalar field. These corrections manifest as an effective ``dark source'' that mimics dark matter in galactic rotation curves and dark energy in cosmological expansion. We propose a specific experimental test using atom interferometry to detect the predicted entropic noise. Bose--Einstein condensate free-fall, and gravitational-wave memory---that could constrain or refute these entropic corrections. The resulting picture treats gravity and quantum mechanics as complementary limits of a deeper feedback law governing the alignment of quantum information with spacetime geometry.
+We show that this framework reproduces the semiclassical Einstein equation and the Einstein--Langevin form of stochastic gravity in appropriate limits. As a concrete prediction, we derive a small, coherence-dependent violation of the Weak Equivalence Principle for macroscopic quantum superpositions, which may be testable with next-generation atom interferometry. The resulting picture treats gravity and quantum mechanics as complementary limits of a deeper feedback law governing the alignment of quantum information with spacetime geometry.
 \end{abstract}
 
 \maketitle
@@ -107,7 +107,7 @@ If so, one might hope to:
 (ii) identify an additional ``informational'' stress tensor that encodes how persistent coherence feeds back on geometry; and
 (iii) derive concrete, albeit small, deviations from the Weak Equivalence Principle or from $\Lambda$CDM cosmology that are, in principle, observable.
 
-We call the resulting framework \emph{Entropic Feedback}.
+We call the resulting framework \emph{Coherism}.
 The name emphasizes the focus on \emph{relative entropy}, understood as a measure of distinguishability, as a dynamical player in the geometry--state feedback loop.
 
 The basic picture is sketched in Fig.~\ref{fig:feedback-loop}.
@@ -185,7 +185,6 @@ Given two states $\rho$ and $\sigma$ on the same algebra, the quantum relative e
     S(\rho||\sigma) = \mathrm{tr}(\rho \log \rho) - \mathrm{tr}(\rho \log \sigma) \ge 0.
 \end{equation}
 Relative entropy is a measure of distinguishability. It is monotonic under partial trace (data processing inequality) and invariant under unitary evolution.
-\emph{Remark (Degravitation).} A key feature of using relative entropy is that the reference state $\sigma$ (the vacuum) contributes zero to the action, since $S(\sigma||\sigma)=0$. This naturally degravitates the vacuum energy density, addressing the cosmological constant problem without fine-tuning.
 
 On a causal diamond $\Ddom(x;\mu)$ we define a \emph{relative-entropy density}
 \begin{equation}
@@ -429,26 +428,7 @@ A fully UV-complete theory would likely require a non-Markovian generator to str
 Recent work on modular Lindbladians suggests that such non-localities are inherent to the holographic nature of the theory but are suppressed by the Planck scale in the low-energy limit.
 For the macroscopic applications considered here, Eq.~\eqref{eq:lindblad-ansatz} suffices as a phenomenological model of information loss to the geometry.
 
-\begin{figure}[t]
-    \centering
-    \begin{tikzpicture}
-        \begin{axis}[
-            width=0.8\linewidth,
-            height=5cm,
-            xlabel={Time $t$ (Planck units)},
-            ylabel={Energy $E(t)$},
-            legend pos=north east,
-            grid=major
-        ]
-        \addplot[blue, dashed, thick] table[x=t, y=E_base] {simulation_data.dat};
-        \addlegendentry{Standard Evolution}
-        \addplot[red, thick] table[x=t, y=E_coherist] {simulation_data.dat};
-        \addlegendentry{Entropic Damping}
-        \end{axis}
-    \end{tikzpicture}
-    \caption{Numerical simulation of the Entropic Wave Equation. The blue dashed line shows the constant energy of a standard harmonic oscillator. The red solid line shows the energy decay due to the informational friction term $\kappa \Theta_{00} \dot{\phi}$, demonstrating the ``friction of geometry'' acting on coherent states. Parameters: $\kappa=0.5$, initial amplitude $\phi_0=1.0$, units of Planck time $t_P$ and Planck energy $E_P$.}
-    \label{fig:simulation}
-\end{figure}
+
 
 A schematic representation of the geometry--state coupling is shown in Fig.~\ref{fig:diamond}.
 Causal diamonds act as local ``patches'' where geometry, state, and their mismatch are evaluated and fed back into the dynamics.
@@ -727,8 +707,8 @@ A simple phenomenological ansatz is
 \end{equation}
 where $\Delta \Iop(t)$ is a measure of the ``coherence deficit'' of the cosmic state relative to the FRW background at a given coarse-graining scale.
 Here, we define the coherence deficit explicitly as $\Delta \Iop(t) \equiv \int_{\Sigma_t} d^3x \sqrt{h} \, s_{\mathrm{rel}}(\rho || \sigma)$, representing the total informational misalignment in the spatial slice.
-This leads to small deviations from a pure cosmological constant, modeled by an equation of state $w(a) = -1 + w_a (1-a)$ and a modified growth index $\gamma = 0.55+\delta\gamma$.
-Observational consistency with Planck and SH0ES data requires $|w(a) + 1| < 0.01$ for redshifts $z < 1$, placing a tight bound on the evolution of this deficit.
+This may lead to effective contributions to the stress tensor, modeled by an equation of state $w(a) = -1 + w_a (1-a)$ and a modified growth index $\gamma = 0.55+\delta\gamma$.
+Observational consistency with Planck and SH0ES data constrains these deviations, placing a tight bound on the evolution of this deficit.
 These deviations are constrained by current data but may leave a small window for entropic corrections.
 A more quantitative analysis would require integrating the entropic term into a Boltzmann code, as outlined in Appendix~\ref{appendix:boltzmann}.
 
@@ -1121,6 +1101,6 @@ For a coherent state with $\bar{n} = 10^6$ photons at optical frequency in a $1\
 % \end{acknowledgments}
 
 \bibliographystyle{apsrev4-2}
-\bibliography{gbre_refs}
+\bibliography{coherism_refs}
 
 \end{document}
