--- a/physics/coherism_refs.bib
+++ b/physics/coherism_refs.bib
@@ -8,7 +8,8 @@
   year         = {1995},
   doi          = {10.1103/PhysRevLett.75.1260},
   archivePrefix= {arXiv},
-  eprint       = {gr-qc/9504004}
+  eprint       = {gr-qc/9504004},
+  url          = {https://doi.org/10.1103/PhysRevLett.75.1260}
 }
 
 @article{FaulknerLewkowyczMaldacena2013,
@@ -21,7 +22,8 @@
   doi          = {10.1007/JHEP11(2013)074},
   archivePrefix= {arXiv},
   eprint       = {1307.2892},
-  primaryClass = {hep-th}
+  primaryClass = {hep-th},
+  url          = {https://doi.org/10.1007/JHEP11(2013)074}
 }
 
 @article{Lindblad1976,
@@ -32,7 +34,8 @@
   number       = {2},
   pages        = {119--130},
   year         = {1976},
-  doi          = {10.1007/BF01608499}
+  doi          = {10.1007/BF01608499},
+  url          = {https://doi.org/10.1007/BF01608499}
 }
 
 @article{Bekenstein1973,
@@ -43,7 +46,8 @@
   number       = {8},
   pages        = {2333--2346},
   year         = {1973},
-  doi          = {10.1103/PhysRevD.7.2333}
+  doi          = {10.1103/PhysRevD.7.2333},
+  url          = {https://doi.org/10.1103/PhysRevD.7.2333}
 }
 
 @article{Hawking1975,
@@ -54,7 +58,8 @@
   number       = {3},
   pages        = {199--220},
   year         = {1975},
-  doi          = {10.1007/BF02345020}
+  doi          = {10.1007/BF02345020},
+  url          = {https://doi.org/10.1007/BF02345020}
 }
 
 @article{Polyakov1981,
@@ -65,7 +70,8 @@
   number       = {3},
   pages        = {207--210},
   year         = {1981},
-  doi          = {10.1016/0370-2693(81)90743-7}
+  doi          = {10.1016/0370-2693(81)90743-7},
+  url          = {https://doi.org/10.1016/0370-2693(81)90743-7}
 }
 
 @article{HuVerdaguer2008,
@@ -78,7 +84,8 @@
   doi          = {10.12942/lrr-2008-3},
   archivePrefix= {arXiv},
   eprint       = {0802.0658},
-  primaryClass = {gr-qc}
+  primaryClass = {gr-qc},
+  url          = {https://doi.org/10.12942/lrr-2008-3}
 }
 
 @article{Diosi1989,
@@ -89,7 +96,8 @@
   number       = {3},
   pages        = {1165--1174},
   year         = {1989},
-  doi          = {10.1103/PhysRevA.40.1165}
+  doi          = {10.1103/PhysRevA.40.1165},
+  url          = {https://doi.org/10.1103/PhysRevA.40.1165}
 }
 
 @article{Penrose1996,
@@ -100,7 +108,8 @@
   number       = {5},
   pages        = {581--600},
   year         = {1996},
-  doi          = {10.1007/BF02105068}
+  doi          = {10.1007/BF02105068},
+  url          = {https://doi.org/10.1007/BF02105068}
 }
 
 @article{Wall2010,
@@ -114,7 +123,8 @@
   doi          = {10.1103/PhysRevD.82.124019},
   archivePrefix= {arXiv},
   eprint       = {1007.1493},
-  primaryClass = {gr-qc}
+  primaryClass = {gr-qc},
+  url          = {https://doi.org/10.1103/PhysRevD.82.124019}
 }
 
 @article{Wall2012QNEC,
@@ -128,7 +138,8 @@
   doi          = {10.1103/PhysRevD.81.024038},
   archivePrefix= {arXiv},
   eprint       = {0910.5751},
-  primaryClass = {gr-qc}
+  primaryClass = {gr-qc},
+  url          = {https://doi.org/10.1103/PhysRevD.81.024038}
 }
 
 @article{FuentesReview2010,
@@ -138,7 +149,8 @@
   volume       = {12},
   pages        = {095006},
   year         = {2010},
-  doi          = {10.1088/1367-2630/12/9/095006}
+  doi          = {10.1088/1367-2630/12/9/095006},
+  url          = {https://doi.org/10.1088/1367-2630/12/9/095006}
 }
 
 @book{BirrellDavies1982,
@@ -146,7 +158,8 @@
   title        = {Quantum Fields in Curved Space},
   publisher    = {Cambridge University Press},
   year         = {1982},
-  address      = {Cambridge}
+  address      = {Cambridge},
+  url          = {https://www.cambridge.org/9780521278584}
 }
 
 @article{Touboul2017,
@@ -176,7 +189,8 @@
   doi = {10.1007/JHEP04(2011)029},
   archivePrefix = {arXiv},
   eprint = {1001.0785},
-  primaryClass = {hep-th}
+  primaryClass = {hep-th},
+  url          = {https://doi.org/10.1007/JHEP04(2011)029}
 }
 
 @article{Verlinde2017,
@@ -191,7 +205,8 @@
   doi = {10.21468/SciPostPhys.2.3.016},
   archivePrefix = {arXiv},
   eprint = {1611.02269},
-  primaryClass = {hep-th}
+  primaryClass = {hep-th},
+  url          = {https://doi.org/10.21468/SciPostPhys.2.3.016}
 }
 
 @article{Padmanabhan2010,
@@ -206,7 +221,8 @@
   doi = {10.1088/0034-4885/73/4/046901},
   archivePrefix = {arXiv},
   eprint = {0911.5004},
-  primaryClass = {gr-qc}
+  primaryClass = {gr-qc},
+  url          = {https://doi.org/10.1088/0034-4885/73/4/046901}
 }
 
 @book{Wald1994,
@@ -215,7 +231,8 @@
   publisher = {University of Chicago Press},
   year = {1994},
   address = {Chicago},
-  isbn = {9780226870274}
+  isbn = {9780226870274},
+  url = {https://press.uchicago.edu/ucp/books/book/chicago/Q/bo3644918.html}
 }
 
 @book{Haag1992,
@@ -225,7 +242,8 @@
   year = {1992},
   address = {Berlin, Heidelberg},
   isbn = {978-3-540-61049-6},
-  edition = {2nd}
+  edition = {2nd},
+  url = {https://link.springer.com/book/10.1007/978-3-642-61458-3}
 }
 
 @article{Casini2008,
@@ -237,7 +255,8 @@
   year = {2008},
   eprint = {0804.2182},
   archivePrefix = {arXiv},
-  primaryClass = {hep-th}
+  primaryClass = {hep-th},
+  url = {https://arxiv.org/abs/0804.2182}
 }
 
 @article{Faulkner2017,
@@ -249,7 +268,6 @@
   year = {2017},
   eprint = {1605.08072},
   archivePrefix = {arXiv},
-  primaryClass = {hep-th}
+  primaryClass = {hep-th},
+  url = {https://arxiv.org/abs/1605.08072}
 }
-
-
